// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TailTriangle should match snapshot when width > height 1`] = `
<svg
  className="TailTriangle"
  height={16}
  viewBox="0 0 16 16"
  width={16}
>
  <polygon
    className="shape"
    fill="currentColor"
    points="0 16 8 8 16 16"
  />
</svg>
`;

exports[`TailTriangle should match snapshot when width < height 1`] = `
<svg
  className="TailTriangle"
  height={18}
  viewBox="0 0 18 18"
  width={18}
>
  <polygon
    className="shape"
    fill="currentColor"
    points="6 18 9 0 12 18"
  />
</svg>
`;
